test/success/loops.cvc
#include "civic.h"

export int main() {
    int a = 0;

    for (int b = 0, 10, 2) {
        a = a + b;
    }

    do {
        a = a + 7;
    } while (a < 100);

    while (a * a < 20000) {
        a = a * 2;
    }

    printInt(a);
    printNewlines(1);

    return 0;
}
