test/fail/extra.cvc
export int main() {
	int a = 5;
    int b;
	a += 7 * (((b - b) * 56) + 5);
    a++;
    a--;
	return 0;
}
